--- a/www/index.html
+++ b/www/index.html
@@ -5,16 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="components/loader.js"></script>
-    <script src="js/ncmb-3.0.0.min.js"></script>
+
+  <!-- JQuery 3.3.1 -->
+  <script src="components/jquery-3.3.1.min.js"></script>
+  <script src="components/acoes.js"></script>
+
+  <!-- Bootstrap 3.3.7. -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.js">
+  <link rel="stylesheet" href="components/loader.css">
+  <link rel="stylesheet" href="css/style.css">
     <script>
-        // Add your code here
+        
     </script>
 </head>
 <body>
-
-    <p>App template using NIFTY Cloud mobile backend</p>
+  
+    
 
 </body>
 </html>
