Inicio e salvamento do front

--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,18 @@
     </script>
 </head>
 <body>
-  
-    
-
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-4" id="head">
+        <img src="img/seta.png" id="seta">
+      </div>
+      <div class="col-xs-4" id="head">
+        <img src="img/seta.png" id="seta">
+      </div>
+      <div class="col-xs-4" id="head">
+        <img src="img/seta.png" id="seta">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
