inputs de altura e peso e pequenos ajustes

--- a/www/index.html
+++ b/www/index.html
@@ -32,8 +32,17 @@
         <img src="img/seta.png" id="seta">
       </div>
     </div>
-
     
+    <div class="row">
+      <div class="col-xs-5">
+        insira sua altura
+       <input class="form-control" id="focusedInput" type="text" >
+      </div>
+      <div class="col-xs-5">
+        insira seu peso
+       <input class="form-control" id="focusedInput" type="text" >
+      </div>
+    </div>
   </div>
 </body>
 </html>
