--- a/www/index.html
+++ b/www/index.html
@@ -35,8 +35,9 @@
     
     <div class="row">
       <div class="col-xs-6">
-        <label>Sua Idade</label>
-       <input class="form-control" type="text" >
+        <label>Sua Idade <input id="idade" class="form-control" type="text" ></label>
+        <label>Sua Altura <input id="altura" class="form-control" type="text" ></label>
+        <label>Seu Peso <input id="peso" class="form-control" type="text" ></label>
       </div>
     
       <div class="col-xs-6">
@@ -63,7 +64,7 @@
     <div class="row linha">
       <div class="col-xs-12">
       Selecione seu Sexo Biologico
-        <select>
+        <select name="sexo" id="sexo">
           <option value="h">Homem</option>
           <option value="m">Mulher</option>
         </select>
@@ -75,5 +76,10 @@
       <button class="btn btn-success btn-block " id="btnFinalisar">Calcular</button>
     </div>
   </div>
+    <div class="row">
+      <div class="div col-xs-12">
+        <input type="text" class="form-control display" id="display">
+      </div>
+    </div>
 </body>
 </html>
